# llm-hands-on

./: .gitignore  .tool-versions  README.md  pyproject.toml
llm_hands_on/: app.py  main.py
