[tool.poetry]
name = "llm-hands-on"
version = "0.1.0"
description = ""
authors = ["tosaka07 <tosakaup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langchain = "^0.2.0"
langchain-community = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
